[gd_scene load_steps=10 format=3 uid="uid://b0ely4q1hwr86"]

[ext_resource type="PackedScene" uid="uid://cctk28cq8i04r" path="res://player/player.tscn" id="1_6oynf"]
[ext_resource type="Script" path="res://Level/level.gd" id="1_iin60"]
[ext_resource type="PackedScene" uid="uid://c2r81xckr8y6b" path="res://ball/ball.tscn" id="2_4my11"]
[ext_resource type="PackedScene" uid="uid://cv7532cms6ltv" path="res://opponent/opponent.tscn" id="2_78c15"]
[ext_resource type="Script" path="res://Level/fps_counter.gd" id="3_reoep"]
[ext_resource type="FontFile" uid="uid://bue8dot1uw50m" path="res://assets/fonts/Silkscreen-Bold.ttf" id="6_8khrs"]
[ext_resource type="AudioStream" uid="uid://1sp54pbdvewf" path="res://assets/sounds/ping_pong_8bit_plop.ogg" id="6_mklef"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6eaen"]
size = Vector2(1280, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b044l"]
size = Vector2(60, 712)

[node name="Level" type="Node2D"]
script = ExtResource("1_iin60")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.133333, 0.12549, 0.203922, 1)

[node name="player" parent="." instance=ExtResource("1_6oynf")]
position = Vector2(64, 360)
scale = Vector2(3, 3)

[node name="opponent" parent="." instance=ExtResource("2_78c15")]
position = Vector2(1220, 360)
scale = Vector2(3, 3)
metadata/_edit_group_ = true

[node name="bottom_wall" type="StaticBody2D" parent="."]
position = Vector2(640, 730)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_wall"]
shape = SubResource("RectangleShape2D_6eaen")

[node name="top_wall" type="StaticBody2D" parent="."]
position = Vector2(640, -10)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_wall"]
shape = SubResource("RectangleShape2D_6eaen")

[node name="ball" parent="." instance=ExtResource("2_4my11")]
position = Vector2(640, 360)

[node name="fps_counter" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "FPS Counter"
script = ExtResource("3_reoep")

[node name="left_wall" type="Area2D" parent="."]
position = Vector2(-16, 359)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_wall"]
shape = SubResource("RectangleShape2D_b044l")

[node name="right_wall" type="Area2D" parent="."]
position = Vector2(1298, 361)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_wall"]
shape = SubResource("RectangleShape2D_b044l")

[node name="player_score" type="Label" parent="."]
offset_left = 330.0
offset_top = 128.0
offset_right = 576.0
offset_bottom = 213.0
theme_override_colors/font_color = Color(0.898039, 0.811765, 0.894118, 1)
theme_override_fonts/font = ExtResource("6_8khrs")
theme_override_font_sizes/font_size = 64
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="opponent_score" type="Label" parent="."]
offset_left = 722.0
offset_top = 129.0
offset_right = 909.0
offset_bottom = 214.0
theme_override_colors/font_color = Color(0.898039, 0.811765, 0.894118, 1)
theme_override_fonts/font = ExtResource("6_8khrs")
theme_override_font_sizes/font_size = 64
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="timer_label" type="Label" parent="."]
visible = false
offset_left = 528.0
offset_top = 417.0
offset_right = 752.0
offset_bottom = 584.0
theme_override_colors/font_color = Color(0.442288, 0.426542, 0.60222, 1)
theme_override_fonts/font = ExtResource("6_8khrs")
theme_override_font_sizes/font_size = 128
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="score_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mklef")

[connection signal="body_entered" from="left_wall" to="." method="_on_left_wall_body_entered"]
[connection signal="body_entered" from="right_wall" to="." method="_on_right_wall_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
